--- a/rise-dynamic-service/serverless/configs/resources/log-group-and-subscription.yml
+++ b/rise-dynamic-service/serverless/configs/resources/log-group-and-subscription.yml
@@ -12,15 +12,15 @@ Resources:
       LogGroupName: 
         Ref: AddressLookupLogGroup
 
-  KYCServiceLogGroup:
+  RISEServiceLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: /aws/lambda/${self:provider.stage}-ekyc-service
+      LogGroupName: /aws/lambda/${self:provider.stage}-rise-service
       RetentionInDays: ${self:custom.fromTerraform.pe_log_group_retention_period}
-  KYCServiceNewSubscriptionFilter:
+  RISEServiceNewSubscriptionFilter:
     Type: AWS::Logs::SubscriptionFilter
     Properties: 
       DestinationArn: arn:aws:lambda:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.aws_account_id, '0'}:function:datadog-log-shipper-lambda-${self:provider.stage}
       FilterPattern: ''
       LogGroupName: 
-        Ref: KYCServiceLogGroup
+        Ref: RISEServiceLogGroup
