--- a/rise-dynamic-service/serverless/configs/providers/aws/dev/env.yml
+++ b/rise-dynamic-service/serverless/configs/providers/aws/dev/env.yml
@@ -31,5 +31,6 @@ SEND_EDOVIZ_BASIC_DUPLICATE_MSG: Belge sistemde mevcut olduğundan iptal edildi!
 PROWEB_WSDL_URL: http://100.68.13.136:2021/proweb.wsdl
 PROWEB_SERVICE_ENDPOINT: "http://100.68.13.136:2021/proweb.wsdl"
 
-PFX_CERTIFICATE:${opt:stage, self:provider.stage}-experian-kyc-cert
-PASSWORD:${opt:stage, self:provider.stage}-experian-kyc-password
+BUCKET_NAME: tvx-middleware-dev
+DELAY_IN_SECOND: 1
+ERROR_CODE_TO_CHECK: ETIMEOUT
