--- a/rise-dynamic-service/serverless/configs/providers/aws/local/env.yml
+++ b/rise-dynamic-service/serverless/configs/providers/aws/local/env.yml
@@ -26,6 +26,5 @@ CacheTTL: 100
 SEND_EDOVIZ_BASIC_DUPLICATE_MSG: Belge sistemde mevcut olduğundan iptal edildi!
 ICE_WSDL_URL: http://100.68.13.136:2021/proweb.wsdl
 ICE_SERVICE_ENDPOINT: http://100.68.13.136:2022
-
-PFX_CERTIFICATE: ${opt:stage, self:provider.stage}-experian-kyc-cert
-PASSWORD: ${opt:stage, self:provider.stage}-experian-kyc-password
+DELAY_IN_SECOND: 1
+ERROR_CODE_TO_CHECK: ETIMEOUT
