--- a/rise-dynamic-service/serverless/configs/providers/aws/uat/env.yml
+++ b/rise-dynamic-service/serverless/configs/providers/aws/uat/env.yml
@@ -26,5 +26,6 @@ SEND_EDOVIZ_BASIC_DUPLICATE_MSG: Belge sistemde mevcut olduğundan iptal edildi!
 ICE_WSDL_URL: https://integrationtest.iceteknoloji.com.tr/integration.asmx?WSDL
 ICE_SERVICE_ENDPOINT: https://integrationtest.iceteknoloji.com.tr/integration.asmx
 
-PFX_CERTIFICATE:${opt:stage, self:provider.stage}-experian-kyc-cert
-PASSWORD:${opt:stage, self:provider.stage}-experian-kyc-password
+BUCKET_NAME: tvx-middleware-uat
+DELAY_IN_SECOND: 1
+ERROR_CODE_TO_CHECK: ETIMEOUT
