--- a/rise-dynamic-service/serverless/configs/providers/aws/dev/env.yml
+++ b/rise-dynamic-service/serverless/configs/providers/aws/dev/env.yml
@@ -1,9 +1,9 @@
 ENVIRONMENT: ${self:provider.stage}
-# BASE_PATH: ${self:custom.fromTerraform.middleware_private_api_gateway_base_url}
-# API_KEY_SSM_NAME: ${self:custom.fromTerraform.middleware_private_api_gateway_lambda_api_key_ssm_name}
-# # VPC_SSM_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-ssmparamstore}
-# VPC_SSM_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-ssmparamstore}
-# HEADER_API_KEY_NAME: x-api-key
+BASE_PATH: ${self:custom.fromTerraform.middleware_private_api_gateway_base_url}
+API_KEY_SSM_NAME: ${self:custom.fromTerraform.middleware_private_api_gateway_lambda_api_key_ssm_name}
+VPC_SSM_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-ssmparamstore}
+VPC_SSM_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-ssmparamstore}
+HEADER_API_KEY_NAME: x-api-key
 LOG_LEVEL: debug
 ERROR_RETRY_COUNT: 5
 ERROR_RETRY_WAIT_TIME: 1 # 1 Second
@@ -11,8 +11,6 @@ ERROR_RETRY_WAIT_TIME: 1 # 1 Second
 # db configuration
 USER_NAME: middleware-${opt:stage, self:provider.stage}-rds-database-username
 PASSWORD: middleware-${opt:stage, self:provider.stage}-auroradb-master-password
-SEQUENCER_DATABASE_NAME: eif_${opt:stage, self:provider.stage}
-SEQUENCER_TABLE_NAME: eif_warehouse_event_sequencer_${opt:stage, self:provider.stage}
 SERVER: ${self:custom.fromTerraform.aurora-database-endpoint}
 ACQUIRE_TIMEOUT: 120000
 CONNECTION_TIMEOUT: 120000
@@ -21,15 +19,9 @@ CONNECTION_TIMEOUT: 120000
 CLOUD_ACCOUNT_ID: ${self:custom.fromTerraform.aws_account_id}
 REGION: ${self:custom.fromTerraform.region}
 SNS_TOPIC_ARN: ${self:custom.fromTerraform.risk_compliance_sns_topic_id}
-# TOPIC_NAME: ${opt:stage, self:provider.stage}-eif-audit-topic
-# VPC_SNS_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-sns-endpoint}
-
-SECRET_KEY_NAME: middleware-dev-ice-login-response-credential
+TOPIC_NAME: ${opt:stage, self:provider.stage}-eif-audit-topic
+VPC_SNS_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-sns-endpoint}
 CacheTTL: 100
-SEND_EDOVIZ_BASIC_DUPLICATE_MSG: Belge sistemde mevcut olduğundan iptal edildi!
-
-PROWEB_WSDL_URL: http://100.68.13.136:2021/proweb.wsdl
-PROWEB_SERVICE_ENDPOINT: "http://100.68.13.136:2021/proweb.wsdl"
 
 BUCKET_NAME: tvx-middleware-dev
 DELAY_IN_SECOND: 1
