--- a/rise-dynamic-service/api-operations/rise-service/package.json
+++ b/rise-dynamic-service/api-operations/rise-service/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "ajv": "8.8.2",
+    "csvtojson": "^2.0.10",
     "evil-dns": "0.2.0",
     "fast-xml-parser": "^4.0.7",
     "generic-exception": "https://github.com/travelex/generic-exception-js.git#1.0.0",
