--- a/rise-dynamic-service/serverless/configs/providers/aws/local/env.yml
+++ b/rise-dynamic-service/serverless/configs/providers/aws/local/env.yml
@@ -11,7 +11,7 @@ SESSION_EXPIRY_MSG_EXTERNAL : SESSION_EXPIRED
 EIF_SESSION_EXPIRY_TIME : 1440  # 24 hours = 1440 minutes
 ERROR_RETRY_WAIT_TIME: 1
 CONCURRENT_BATCH_WAIT_TIME: 2000
-ERROR_CODE_TO_CHECK: ETIMEOUT
+#ERROR_CODE_TO_CHECK: ETIMEOUT
 STAGING_TABLE_NAME: staging-data-${opt:stage, self:provider.stage}
 BATCH_SIZE: 100
 #For SNS
