--- a/rise-dynamic-service/serverless/package.json
+++ b/rise-dynamic-service/serverless/package.json
@@ -4,6 +4,7 @@
   "description": "Serverless data api",
   "main": "index.js",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "lru-cache": "^7.8.1",
     "rise-service": "file:../api-operations/rise-service",
     "serverless-offline": "^8.8.0",
