--- a/rise-dynamic-service/api-operations/rise-service/package.json
+++ b/rise-dynamic-service/api-operations/rise-service/package.json
@@ -26,6 +26,7 @@
     "csvtojson": "^2.0.10",
     "evil-dns": "0.2.0",
     "fast-xml-parser": "^4.0.7",
+    "tvxcloud-storage": "git+ssh://github.com/travelex/tvxcloud-storage.git",
     "generic-exception": "https://github.com/travelex/generic-exception-js.git#1.0.0",
     "he": "^1.2.0",
     "lru-cache": "7.8.1",
