--- a/rise-dynamic-service/api-operations/rise-service/package.json
+++ b/rise-dynamic-service/api-operations/rise-service/package.json
@@ -26,7 +26,6 @@
     "csvtojson": "^2.0.10",
     "evil-dns": "0.2.0",
     "fast-xml-parser": "^4.0.7",
-    "tvxcloud-storage": "git+ssh://github.com/travelex/tvxcloud-storage.git",
     "generic-exception": "https://github.com/travelex/generic-exception-js.git#1.0.0",
     "he": "^1.2.0",
     "lru-cache": "7.8.1",
@@ -34,12 +33,13 @@
     "object-mapper": "6.2.0",
     "prettify-xml": "1.2.0",
     "request": "2.88.0",
+    "require-from-memory": "^1.0.2",
     "serverless": "^3.16.0",
     "serverless-offline": "^8.8.0",
     "soap": "0.42.0",
+    "tvxcloud-storage": "https://github.com/travelex/tvxcloud-storage.git",
     "winston-wrapper": "https://github.com/travelex/winston-wrapper.git#1.0.23",
-    "xml-js": "^1.6.11",
-    "tvxcloud-storage": "git+ssh://github.com/travelex/tvxcloud-storage.git"
+    "xml-js": "^1.6.11"
   },
   "license": "ISC",
   "devDependencies": {
