--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,8 +255,8 @@ jobs:
             aws s3 ls
   
             BRANCH_STEM=${CIRCLE_BRANCH/\/*//}
-            ENVIRONMENT=$(echo -e 'develop dev\nmaster prod' | awk -vX=$BRANCH_STEM '$1 == X { print $2 }')
-            AWS_ACCOUNT_TYPE=$(echo -e 'develop nonprod\nmaster prod' | awk -vX=$BRANCH_STEM '$1 == X { print $2 }')
+            ENVIRONMENT=$(echo -e 'feature/dit dev\nmaster prod' | awk -vX=$BRANCH_STEM '$1 == X { print $2 }')
+            AWS_ACCOUNT_TYPE=$(echo -e 'feature/dit nonprod\nmaster prod' | awk -vX=$BRANCH_STEM '$1 == X { print $2 }')
             
             aws s3 cp s3://tvx-hackathon-mentorship-${ENVIRONMENT}-app-config/terraform_outputs.json terraform/applications/            
             cd terraform/applications/
@@ -308,7 +308,7 @@ workflows:
                 - develop
                 - master
                 - feature/dit
-      - sts_dmz
+      #- sts_dmz
 
       - lambda-job:
           name: rise-dynamic-service
