--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -258,7 +258,7 @@ jobs:
             ENVIRONMENT=$(echo -e 'feature/dit dev\nmaster prod' | awk -vX=$BRANCH_STEM '$1 == X { print $2 }')
             AWS_ACCOUNT_TYPE=$(echo -e 'feature/dit nonprod\nmaster prod' | awk -vX=$BRANCH_STEM '$1 == X { print $2 }')
             
-            aws s3 cp s3://tvx-hackathon-mentorship-${ENVIRONMENT}-app-config/terraform_outputs.json terraform/applications/            
+            aws s3 cp s3://tvx-hackathon-mentorship-dev-app-config/terraform_outputs.json terraform/applications/            
             cd terraform/applications/
             ls -larth
             pwd
