--- a/rise-dynamic-service/serverless/serverless.yml
+++ b/rise-dynamic-service/serverless/serverless.yml
@@ -23,27 +23,25 @@ provider:
   runtime: ${self:custom.fromTerraform.node_runtime}
   memorySize: 512
   stage: ${opt:stage}
-  region: ${self:custom.fromTerraform.middleware_region}
+  region: ${self:custom.fromTerraform.region}
   stackName: sls-${opt:stage, self:provider.stage}-${self:service}-stack
-  stackTags: ${self:custom.fromTerraform.middleware_common_tags}
-  tags: ${self:custom.fromTerraform.middleware_common_tags}
+  stackTags: ${self:custom.fromTerraform.common_tags}
+  tags: ${self:custom.fromTerraform.common_tags}
   vpc:
     securityGroupIds:
       - ${self:custom.fromTerraform.middleware_lambda_security_group_id}
     subnetIds: 
-      - ${self:custom.fromTerraform.middleware_private_subnet_private_0}
-      - ${self:custom.fromTerraform.middleware_private_subnet_private_1}
-      - ${self:custom.fromTerraform.middleware_private_subnet_private_2}
+      - ${self:custom.fromTerraform.subnet_private_0}
+      - ${self:custom.fromTerraform.subnet_private_1}
   deploymentBucket:
-    name: ${self:custom.fromTerraform.middleware_deployment_bucket_name}
+    name: 'dev-ui-mentorship-tvx-test-cloud'
   apiGateway:
-    restApiId: ${self:custom.fromTerraform.middleware_private_api_gateway_id}
-    restApiRootResourceId:
-       'Fn::ImportValue': middleware-${opt:stage}-api-gateway-adapter-root-id
+    restApiId: ${self:custom.fromTerraform.mentorship_rest_api_id}
+    restApiRootResourceId: ${self:custom.fromTerraform.mentorship_rest_api_root_resource_id}
   environment: ${file(./configs/providers/${self:provider.name}/${opt:stage, self:provider.stage}/env.yml)}
-  logs:
-    restApi: "${self:custom.fromTerraform.middleware_private_api_gateway_logs_enabled}"
-  iamManagedPolicies: ${self:custom.fromTerraform.middleware_lambda_iam_policy_arns}
+  #logs:
+    #restApi: "${self:custom.fromTerraform.middleware_private_api_gateway_logs_enabled}"
+  #iamManagedPolicies: ${self:custom.fromTerraform.middleware_lambda_iam_policy_arns}
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -66,11 +64,11 @@ provider:
         - SNS:Subscribe
        
       Resource:
-        - "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.filecounterTableName}"  
-        - "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.tableName}"
-        - "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.middlewarestagingdata}"
+        #- "arn:aws:dynamodb:${self:custom.fromTerraform.region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.filecounterTableName}"  
+        #- "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.tableName}"
+        #- "arn:aws:dynamodb:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:table/${self:custom.middlewarestagingdata}"
         - "*"
-        - "arn:aws:sns:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:${opt:stage, self:provider.stage}-eif-audit-topic"
+        #- "arn:aws:sns:${self:custom.fromTerraform.middleware_region, 'eu-west-1'}:${self:custom.fromTerraform.middleware_aws_account_id, '0'}:${opt:stage, self:provider.stage}-eif-audit-topic"
 
 functions: 
   - ${file(./configs/functions/rise-service.yml)}
