--- a/common/ci/Makefile-lambda
+++ b/common/ci/Makefile-lambda
@@ -6,7 +6,7 @@ default_build:
 		npm install --no-progress --production
 	cd serverless && \
 		npm install --no-progress --production && \
-		SLS_DEBUG=* $(SLS_PATH) package --stage ${APP_ENVIRONMENT}
+		SLS_DEBUG=* $(SLS_PATH) package dev ${APP_ENVIRONMENT}
 
 default_test: ;
 
