rise intial commit

--- a/common/ci/Makefile-lambda
+++ b/common/ci/Makefile-lambda
@@ -1,16 +1,17 @@
 SLS_PATH = sls
 API_PATH = $(shell ls api-operations)
+APP_ENVIRONMENT = dev
 
 default_build:
 	cd api-operations/$(API_PATH) && \
 		npm install --no-progress --production
 	cd serverless && \
 		npm install --no-progress --production && \
-		SLS_DEBUG=* $(SLS_PATH) package dev ${APP_ENVIRONMENT}
+		SLS_DEBUG=* $(SLS_PATH) package --stage ${APP_ENVIRONMENT}
 
 default_test: ;
 
 default_deploy:
 	cd serverless && \
-		SLS_DEBUG=* $(SLS_PATH) print dev ${APP_ENVIRONMENT} && \
-		SLS_DEBUG=* $(SLS_PATH) deploy --verbose dev ${APP_ENVIRONMENT} --package .serverless
+		SLS_DEBUG=* $(SLS_PATH) print --stage ${APP_ENVIRONMENT} && \
+		SLS_DEBUG=* $(SLS_PATH) deploy --verbose --stage ${APP_ENVIRONMENT} --package .serverless
