rise intial commit

--- a/rise-connection-service/serverless/configs/providers/aws/dev/env.yml
+++ b/rise-connection-service/serverless/configs/providers/aws/dev/env.yml
@@ -2,7 +2,7 @@ ENVIRONMENT: ${self:provider.stage}
 BASE_PATH: ${self:custom.fromTerraform.middleware_private_api_gateway_base_url}
 API_KEY_SSM_NAME: ${self:custom.fromTerraform.middleware_private_api_gateway_lambda_api_key_ssm_name}
 VPC_SSM_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-ssmparamstore}
-VPC_SSM_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-ssmparamstore}
+#VPC_SSM_ENDPOINT: ${self:custom.fromTerraform.middleware-vpc-endpoint-ssmparamstore}
 HEADER_API_KEY_NAME: x-api-key
 LOG_LEVEL: debug
 ERROR_RETRY_COUNT: 5
