--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,12 +255,11 @@ jobs:
             aws s3 ls
   
             BRANCH_STEM=${CIRCLE_BRANCH/\/*//}
-            ENVIRONMENT=$(echo -e 'feature/ dev\nplay/ play\ndevelopment sit\nrelease/ uat\nhotfix/ preprod\nmaster prod' | awk -vX=$BRANCH_STEM '$1 == X { print $2 }')
-            AWS_ACCOUNT_TYPE=$(echo -e 'feature/ nonprod\nmaster prod' | awk -vX=$BRANCH_STEM '$1 == X { print $2 }')
-            echo ${ENVIRONMENT}
+            ENVIRONMENT=$(echo -e 'feature\ dev\nmaster prod' | awk -vX=$BRANCH_STEM '$1 == X { print $2 }')
+            AWS_ACCOUNT_TYPE=$(echo -e 'develop nonprod\nmaster prod' | awk -vX=$BRANCH_STEM '$1 == X { print $2 }')
+            
             aws s3 cp s3://tvx-hackathon-mentorship-${ENVIRONMENT}-app-config/terraform_outputs.json terraform/applications/            
             cd terraform/applications/
-            chmod 774 terraform_outputs.json
             ls -larth
             pwd
       - persist_to_workspace:
