--- a/rise-connection-service/serverless/configs/resources/log-group-and-subscription.yml
+++ b/rise-connection-service/serverless/configs/resources/log-group-and-subscription.yml
@@ -3,7 +3,7 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: /aws/lambda/${self:provider.stage}-rise-connection-service
-      RetentionInDays: 10
+      RetentionInDays: "10"
   RISEServiceNewSubscriptionFilter:
     Type: AWS::Logs::SubscriptionFilter
     Properties: 
