--- a/rise-connection-service/serverless/serverless.yml
+++ b/rise-connection-service/serverless/serverless.yml
@@ -41,7 +41,10 @@ provider:
   environment: ${file(./configs/providers/${self:provider.name}/${opt:stage, self:provider.stage}/env.yml)}
   #logs:
     #restApi: "${self:custom.fromTerraform.private_api_gateway_logs_enabled}"
-  #iamManagedPolicies: ${self:custom.fromTerraform.lambda_iam_policy_arns}
+  iamManagedPolicies: 
+    - "arn:aws:iam::148807490170:policy/middleware-dev-lambda-s3"
+    - "arn:aws:iam::148807490170:policy/middleware-dev-lambda-ssm"
+    - "arn:aws:iam::148807490170:policy/middleware-dev-lambda-kms"
   iamRoleStatements:
     - Effect: Allow
       Action:
